plugins {
    id 'groovy'
    id 'java'
    id 'org.jetbrains.intellij' version '0.7.3'
}

group 'io.github.zjay'
version '2023.5.15'
sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11

repositories {
    maven { name "Alibaba"; url "https://maven.aliyun.com/repository/public" }
    mavenCentral()
}

dependencies {
    compile 'com.alibaba:fastjson:1.2.83'
    compile 'cn.hutool:hutool-all:5.7.9'
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    plugins = ['java', "org.intellij.plugins.markdown", "Git4Idea"]
    version '2021.3'//2021.3、2021.1、2020.3.4
    updateSinceUntilBuild false
    downloadSources true
}
patchPluginXml {
}
test {
    useJUnitPlatform()
}
runIde {
    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
    jbrVersion 'jbrsdk-11_0_10-osx-x64-b1314.58'
}

runPluginVerifier {
    ideVersions = ["IIU-2020.3.1", "IIU-2021.2.1"]
//  https://github.com/JetBrains/intellij-plugin-verifier/releases
//  https://data.services.jetbrains.com/products?code=IIU
    verifierPath = '/Users/wilson/Downloads/verifier-cli-1.266-all.jar'
}
